--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,14 @@
-name: CI
+name: CI_Lambda1
 
 on:
   push:
-    branches: [ "lambda1" ]  # Se ejecuta en push a main
+    branches: [ "lambda1" ]  # 🚀 Se ejecuta en push a lambda1
   pull_request:
-    branches: [ "lambda2" ]  # Se ejecuta en PRs a main
-  workflow_dispatch:  # Permite ejecución manual desde GitHub
+    branches: [ "lambda1" ]  # 🚀 Se ejecuta en PRs a lambda1
+  workflow_dispatch:  # 🚀 Permite ejecución manual desde GitHub
 
 jobs:
-  build:
+  test_lambda1:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,15 +23,16 @@ jobs:
       - name: 📦 Instalar dependencias
         run: |
           python -m pip install --upgrade pip
-          pip install pytest boto3 requests beautifulsoup4
+          pip install pytest boto3 requests
 
       - name: 🧪 Ejecutar pruebas para Lambda1
         run: pytest test_lambda1.py --maxfail=1 --disable-warnings --tb=short
 
       - name: ✅ Confirmación de pruebas exitosas
         if: success()
-        run: echo "Todas las pruebas pasaron correctamente 🚀"
+        run: echo "Todas las pruebas de Lambda1 pasaron correctamente 🚀"
 
       - name: ❌ Reporte de error si las pruebas fallan
         if: failure()
-        run: echo "❌ Las pruebas han fallado. Revisa los errores en los logs."
+        run: echo "❌ Las pruebas de Lambda1 han fallado. Revisa los errores en los logs."
+
