--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,34 +1,40 @@
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:  # Permite ejecutar manualmente desde GitHub Actions
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: 📥 Clonar el repositorio
+        uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: 🐍 Configurar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: 📦 Instalar dependencias
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          python -m pip install --upgrade pip
+          pip install pytest boto3 requests beautifulsoup4
+
+      - name: 🧪 Ejecutar pruebas para Lambda1
+        run: pytest test_lambda1.py --maxfail=1 --disable-warnings --tb=short
+
+      - name: 🧪 Ejecutar pruebas para Lambda2
+        run: pytest test_lambda2.py --maxfail=1 --disable-warnings --tb=short
+
+      - name: ✅ Confirmación de pruebas exitosas
+        if: success()
+        run: echo "Todas las pruebas pasaron correctamente 🚀"
+
+      - name: ❌ Reporte de error si las pruebas fallan
+        if: failure()
+        run: echo "❌ Las pruebas han fallado. Revisa los errores en los logs."
