--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,10 +2,14 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
+      - lambda1  # Ahora también ejecuta en lambda1
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:  # Permite ejecutar manualmente desde GitHub Actions
+    branches: 
+      - main
+      - lambda1
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,6 +19,9 @@ jobs:
       - name: 📥 Clonar el repositorio
         uses: actions/checkout@v4
 
+      - name: 📂 Verificar estructura de archivos
+        run: ls -R  # Esto imprimirá la estructura del repositorio en los logs
+
       - name: 🐍 Configurar Python
         uses: actions/setup-python@v4
         with:
@@ -22,19 +29,7 @@ jobs:
 
       - name: 📦 Instalar dependencias
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest boto3 requests beautifulsoup4
+          pip install -r requirements.txt
 
       - name: 🧪 Ejecutar pruebas para Lambda1
         run: pytest test_lambda1.py --maxfail=1 --disable-warnings --tb=short
-
-      - name: 🧪 Ejecutar pruebas para Lambda2
-        run: pytest test_lambda2.py --maxfail=1 --disable-warnings --tb=short
-
-      - name: ✅ Confirmación de pruebas exitosas
-        if: success()
-        run: echo "Todas las pruebas pasaron correctamente 🚀"
-
-      - name: ❌ Reporte de error si las pruebas fallan
-        if: failure()
-        run: echo "❌ Las pruebas han fallado. Revisa los errores en los logs."
