--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,13 +29,13 @@ jobs:
 
       - name: 📦 Instalar dependencias
         run: |
-          if [ -f lambda1/requirements.txt ]; then
-            pip install -r lambda1/requirements.txt
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
           else
-            echo "❌ ERROR: No se encontró lambda1/requirements.txt"
+            echo "❌ ERROR: No se encontró requirements.txt"
             exit 1
           fi
-
+          
       - name: 🧪 Ejecutar pruebas para Lambda1
         run: |
           echo "Ejecutando pruebas..."
