--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,13 +29,14 @@ jobs:
 
       - name: 📦 Instalar dependencias
         run: |
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
+          if [ -f lambda1/requirements.txt ]; then
+            pip install -r lambda1/requirements.txt
           else
-            echo "❌ ERROR: No se encontró requirements.txt"
+            echo "❌ ERROR: No se encontró lambda1/requirements.txt"
             exit 1
           fi
           
       - name: 🧪 Ejecutar pruebas para Lambda1
         run: |
           echo "Ejecutando pruebas..."
+          python -m unittest discover -s lambda1 -p "test_*.py"
