--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,18 +24,20 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # Ajusta la versión de Python según sea necesario
+          python-version: '3.10'  # Ajusta según la versión que necesites
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          pip install pytest  # Aquí se instala pytest
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
 
       - name: Run tests for lambda1
         if: github.ref == 'refs/heads/lambda1' || github.ref == 'refs/heads/main'
-        run: pytest test_lambda1.py
+        run: python -m pytest test_lambda1.py  # Usa python -m pytest para asegurar que lo reconozca
 
       - name: Run tests for lambda2
         if: github.ref == 'refs/heads/lambda2' || github.ref == 'refs/heads/main'
-        run: pytest test_lambda2.py
+        run: python -m pytest test_lambda2.py  # Usa python -m pytest para evitar problemas de PATH
