--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,33 +24,39 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # Ajusta según la versión que necesites
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest  # Asegura que pytest esté instalado
+          pip install pytest
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
 
       - name: Debug - List files
-        run: ls -R  # Imprime la estructura de archivos para verificar que test_lambda1.py está presente
+        run: ls -R  # Muestra la estructura del repositorio
 
       - name: Run tests for lambda1
         if: github.ref == 'refs/heads/lambda1' || github.ref == 'refs/heads/main'
         run: |
+          find . -name "test_lambda1.py"  # Busca el archivo en cualquier ubicación
           if [ -f test_lambda1.py ]; then
             python -m pytest test_lambda1.py
+          elif [ -f lambda1/test_lambda1.py ]; then
+            cd lambda1 && python -m pytest test_lambda1.py
           else
-            echo "⚠️ test_lambda1.py no encontrado" && exit 1
+            echo "⚠️ test_lambda1.py no encontrado en ninguna ubicación" && exit 1
           fi
 
       - name: Run tests for lambda2
         if: github.ref == 'refs/heads/lambda2' || github.ref == 'refs/heads/main'
         run: |
+          find . -name "test_lambda2.py"  # Busca el archivo en cualquier ubicación
           if [ -f test_lambda2.py ]; then
             python -m pytest test_lambda2.py
+          elif [ -f lambda2/test_lambda2.py ]; then
+            cd lambda2 && python -m pytest test_lambda2.py
           else
-            echo "⚠️ test_lambda2.py no encontrado" && exit 1
+            echo "⚠️ test_lambda2.py no encontrado en ninguna ubicación" && exit 1
           fi
