--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,11 +35,12 @@ jobs:
           fi
 
       - name: Debug - List files
-        run: ls -R  # Muestra la estructura del repositorio
+        run: ls -R  # Muestra la estructura del repositorio para depuración
 
       - name: Run tests for lambda1
         if: github.ref == 'refs/heads/lambda1' || github.ref == 'refs/heads/main'
         run: |
+          find . -name "test_lambda1.py"  # Busca el archivo en cualquier ubicación
           if [ -f test_lambda1.py ]; then
             python -m pytest test_lambda1.py
           elif [ -f lambda1/test_lambda1.py ]; then
@@ -47,7 +48,6 @@ jobs:
           else
             echo "⚠️ test_lambda1.py no encontrado en ninguna ubicación" && exit 1
           fi
-
 
       - name: Run tests for lambda2
         if: github.ref == 'refs/heads/lambda2' || github.ref == 'refs/heads/main'
