--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,8 +20,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Asegura que todas las ramas y commits están disponibles
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -37,7 +35,7 @@ jobs:
           fi
 
       - name: Debug - List files
-        run: ls -R
+        run: ls -R  # Esto listará todos los archivos en el workspace para depuración
 
       - name: Run tests for lambda1
         if: github.ref == 'refs/heads/lambda1' || github.ref == 'refs/heads/main'
@@ -45,7 +43,7 @@ jobs:
           echo "Buscando test_lambda1.py en todo el repositorio..."
           find . -name "test_lambda1.py"
           if [ -f test_lambda1.py ]; then
-            echo "✅ test_lambda1.py encontrado, ejecutando pruebas..."
+            echo "✅ test_lambda1.py encontrado en la raíz, ejecutando pruebas..."
             python -m pytest test_lambda1.py
           elif [ -f parcialito/test_lambda1.py ]; then
             echo "✅ test_lambda1.py encontrado en parcialito/, ejecutando pruebas..."
@@ -57,13 +55,10 @@ jobs:
       - name: Run tests for lambda2
         if: github.ref == 'refs/heads/lambda2' || github.ref == 'refs/heads/main'
         run: |
-          echo "Buscando test_lambda2.py en todo el repositorio..."
           find . -name "test_lambda2.py"
           if [ -f test_lambda2.py ]; then
-            echo "✅ test_lambda2.py encontrado, ejecutando pruebas..."
             python -m pytest test_lambda2.py
           elif [ -f lambda2/test_lambda2.py ]; then
-            echo "✅ test_lambda2.py encontrado en lambda2/, ejecutando pruebas..."
             cd lambda2 && python -m pytest test_lambda2.py
           else
             echo "⚠️ test_lambda2.py no encontrado en ninguna ubicación" && exit 1
