--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,11 +23,9 @@ jobs:
         with:
           fetch-depth: 0  # Asegura que todas las ramas y archivos estén disponibles
 
-      - name: Debug - Mostrar estructura del repo
+      - name: Debug - Verificar archivos después de checkout
         run: |
-          echo "Directorio actual:"
-          pwd
-          echo "Contenido del repositorio:"
+          echo "🔎 Mostrando archivos del repo después del checkout"
           ls -R
 
       - name: Set up Python
@@ -47,7 +45,8 @@ jobs:
         if: github.ref == 'refs/heads/lambda1' || github.ref == 'refs/heads/main'
         run: |
           echo "Buscando test_lambda1.py en todo el repositorio..."
-          TEST_FILE=$(find . -name "test_lambda1.py" | head -n 1)
+          find . -type f -name "test_lambda1.py"
+          TEST_FILE=$(find . -type f -name "test_lambda1.py" | head -n 1)
           if [ -n "$TEST_FILE" ]; then
             echo "✅ Encontrado: $TEST_FILE, ejecutando pruebas..."
             python -m pytest "$TEST_FILE"
@@ -60,7 +59,8 @@ jobs:
         if: github.ref == 'refs/heads/lambda2' || github.ref == 'refs/heads/main'
         run: |
           echo "Buscando test_lambda2.py en todo el repositorio..."
-          TEST_FILE=$(find . -name "test_lambda2.py" | head -n 1)
+          find . -type f -name "test_lambda2.py"
+          TEST_FILE=$(find . -type f -name "test_lambda2.py" | head -n 1)
           if [ -n "$TEST_FILE" ]; then
             echo "✅ Encontrado: $TEST_FILE, ejecutando pruebas..."
             python -m pytest "$TEST_FILE"
