--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Asegura que todas las ramas y archivos estén disponibles
+          fetch-depth: 0
 
       - name: Debug - Verificar archivos después de checkout
         run: |
@@ -65,6 +65,4 @@ jobs:
             echo "✅ Encontrado: $TEST_FILE, ejecutando pruebas..."
             python -m pytest "$TEST_FILE"
           else
-            echo "⚠️ test_lambda2.py no encontrado"
-            exit 1
-          fi
+            echo "⚠️ test_lambda2.py no encontrado
