--- a/.github/workflows/lambda|1.yml
+++ b/.github/workflows/lambda|1.yml
@@ -31,7 +31,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest flake8  # 🔹 Se agregó flake8 para revisión de código
+
+      - name: Run Flake8 for Lambda1
+        run: |
+          echo "🔍 Ejecutando flake8 en lambda1.py..."
+          if [ -f lambda1.py ]; then
+            flake8 lambda1.py --max-line-length=120
+          else
+            echo "⚠️ No se encontró lambda1.py"
+            exit 1
+          fi
 
       - name: Run tests for Lambda1
         run: pytest test_lambda1.py
