--- a/.github/workflows/lambda|1.yml
+++ b/.github/workflows/lambda|1.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          ref: "lambda1"  # Asegura que siempre se trabaje en la rama lambda1
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -25,15 +27,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest flake8
 
-      - name: Run Flake8 for Lambda1
-        run: |
-          echo "🔍 Ejecutando flake8 en lambda1.py..."
-          if [ -f lambda1.py ]; then
-            flake8 lambda1.py --max-line-length=120
-          else
-            echo "⚠️ No se encontró lambda1.py"
-            exit 1
-          fi
+      - name: Run Flake8 (code style check)
+        run: flake8 --max-line-length=120  # Ajusta las reglas según tus preferencias
 
       - name: Run tests for Lambda1
         run: pytest test_lambda1.py
