--- a/.github/workflows/lambda|1.yml
+++ b/.github/workflows/lambda|1.yml
@@ -25,7 +25,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest flake8
+          pip install pytest boto3 requests flake8  # Asegurar instalación de dependencias
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
+
 
       - name: Check code style with flake8
         run: |
