--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -2,7 +2,7 @@
     "dev": {
         "app_function": "lambda1.lambda_handler",
         "aws_region": "us-east-1",
-        "profile_name": "default",
+        //"profile_name": "default",
         "project_name": "zappa-pagina",
         "runtime": "python3.10",
         "keep_warm": false,
