--- a/.github/workflows/lambda|1.yml
+++ b/.github/workflows/lambda|1.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest boto3 requests flake8  # Asegurar instalación de dependencias
+          pip install pytest flake8 zappa
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
