--- a/.github/workflows/lambda|1.yml
+++ b/.github/workflows/lambda|1.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Activar Virtual Environment Existente
+        run: |
+          echo "🐍 Activando el entorno virtual existente: parcialito"
+          source parcialito/bin/activate
+          echo "✅ Entorno virtual activado"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
